# lib-stt

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: main.yml
cmake/: dependencies.cmake
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt
examples/basic/src/: main.cpp
examples/googleapi/src/: main.cpp
examples/googlecloud/: CMakeLists.txt
examples/googlecloud/src/: main.cpp
examples/googlecloud/v1/: CMakeLists.txt
examples/googlecloud/v1/src/: main.cpp
examples/googlecloud/v2/: CMakeLists.txt
examples/googlecloud/v2/src/: main.cpp
examples/v1/googlecloud/src/: main.cpp
examples/v2/googleapi/: CMakeLists.txt
examples/v2/googleapi/src/: main.cpp
examples/v2/googlecloud/src/: main.cpp
inc/: helpers.hpp  speechtotext.hpp
inc/stt/: factory.hpp  helpers.hpp
inc/stt/interfaces/: googleapi.hpp  googlecloud.hpp  textfromvoice.hpp
inc/stt/interfaces/v1/: googlecloud.hpp
inc/stt/interfaces/v2/: googleapi.hpp  googlecloud.hpp
info/: info.txt
scripts/: calibrate.sh  get_stt.sh
scripts/audio/: recording.flac
src/: factory.cpp  googlcloud.cpp  googleapi.cpp  helpers.cpp  speechtotext.cpp  speechtotext.cppx  textfromvoice.cpp
src/v1/: googlcloud.cpp
src/v2/: googlcloud.cpp  googleapi.cpp
tests/: CMakeLists.txt  vcpkg.json
tests/cmake/: dependencies.cmake
tests/conf/: init.json  key.json
tests/inc/mocks/: mock_helpers.hpp
tests/src/: test_stt.cpp
